# importtime-output-wrapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  importtime_output_wrapper.py  importtime_wrapper.py  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: coverage.yaml  main.yaml  tests.yaml
tests/: sample_output  test_cli.py  test_get_import_time.py  test_parse_import_time.py  test_print_output.py  test_sort_imports.py
