[metadata]
name = importtime_output_wrapper
version = 1.0.0,
description = This package contains a script that converts the stderr output
                    of the importtime implementation into a (sorted) json format or
                    displays it as a waterfall diagram in the termianal.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominik Walk
author_email = dominik.walk@mail.de
url = https://github.com/dominikwalk/importtime_output_wrapper
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_script =
    importtime_output_wrapper = importtime_output_wrapper.importtime_output_wrapper.main
