[metadata]
name = importtime_output_wrapper
version = 1.1.0
description = A tool to parse the output of the importtime implementaion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominikwalk/importtime_output_wrapper
author = Dominik Walk
author_email = dominik.walk@mail.de
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = importtime_output_wrapper
python_requires = >=3.9

[options.entry_points]
console_scripts =
    importtime-output-wrapper = importtime_output_wrapper:main
